attached_assets/Pasted--Compiling-securechain-v1-0-0-home-runner-workspace-SecureChain-warning-unused-imports-Cli--1751920457895_1751920457897.txt
   Compiling securechain v1.0.0 (/home/runner/workspace/SecureChain)
warning: unused imports: `Cli` and `execute_command`
 --> src/cli/mod.rs:8:20
  |
8 | pub use commands::{Cli, execute_command};
  |                    ^^^  ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `std::path::Path`
 --> src/core/fuzz_engine.rs:9:5
  |
9 | use std::path::Path;
  |     ^^^^^^^^^^^^^^^

warning: unused import: `generator::ReportGenerator`
 --> src/report/mod.rs:9:9
  |
9 | pub use generator::ReportGenerator;
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `vulnerability::Vulnerability`
  --> src/report/mod.rs:10:9
   |
10 | pub use vulnerability::Vulnerability;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `config::Config`
  --> src/utils/mod.rs:10:9
   |
10 | pub use config::Config;
   |         ^^^^^^^^^^^^^^

warning: unused import: `error::BugForgeXError`
  --> src/utils/mod.rs:11:9
   |
11 | pub use error::BugForgeXError;
   |         ^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
    --> src/core/fuzz_engine.rs:201:13
     |
200  |         match output {
     |               ------ this expression has type `impl std::future::Future<Output = std::result::Result<Output, std::io::Error>>`
201  |             Ok(cmd_output) => {
     |             ^^^^^^^^^^^^^^ expected future, found `Result<_, _>`
     |
    ::: /home/runner/workspace/.local/share/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/tokio-1.46.1/src/process/mod.rs:1065:33
     |
1065 | ...-> impl Future<Output = io::Result<Output>> {
     |       ---------------------------------------- the expected future
     |
     = note: expected opaque type `impl std::future::Future<Output = std::result::Result<Output, std::io::Error>>`
                       found enum `std::result::Result<_, _>`
help: consider `await`ing on the `Future`
     |
200  |         match output.await {
     |                     ++++++

error[E0308]: mismatched types
    --> src/core/fuzz_engine.rs:211:13
     |
200  |         match output {
     |               ------ this expression has type `impl std::future::Future<Output = std::result::Result<Output, std::io::Error>>`
...
211  |             Err(e) => {
     |             ^^^^^^ expected future, found `Result<_, _>`
     |
    ::: /home/runner/workspace/.local/share/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/tokio-1.46.1/src/process/mod.rs:1065:33
     |
1065 | ...-> impl Future<Output = io::Result<Output>> {
     |       ---------------------------------------- the expected future
     |
     = note: expected opaque type `impl std::future::Future<Output = std::result::Result<Output, std::io::Error>>`
                       found enum `std::result::Result<_, _>`
help: consider `await`ing on the `Future`
     |
200  |         match output.await {
     |                     ++++++

error[E0277]: the trait bound `&std::string::String: Borrow<&str>` is not satisfied
   --> src/report/generator.rs:252:50
    |
252 |             if let Some(vulns) = by_severity.get(severity) {
    |                                              --- ^^^^^^^^ the trait `Borrow<&str>` is not implemented for `&std::string::String`
    |                                              |
    |                                              required by a bound introduced by this call
    |
    = help: the trait `Borrow<str>` is implemented for `std::string::String`
note: required by a bound in `HashMap::<K, V, S>::get`
   --> /nix/store/y5k023q95ndaiiw8f5x0krkgdvq54h6c-rust-mixed/lib/rustlib/src/rust/library/std/src/collections/hash/map.rs:899:12
    |
897 |     pub fn get<Q: ?Sized>(&self, k: &Q) -> Option<&V>
    |            --- required by a bound in this associated function
898 |     where
899 |         K: Borrow<Q>,
    |            ^^^^^^^^^ required by this bound in `HashMap::<K, V, S>::get`

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
warning: `securechain` (bin "securechain") generated 6 warnings
error: could not compile `securechain` (bin "securechain") due to 3 previous errors; 6 warnings emitted
